<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        tools:context=".AboutUsActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/edit_text"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:text="@string/author"
                    style="@style/about_title"/>

            <TextView
                    android:text="@string/vladimirPetrenko"
                    style="@style/about_person"/>

            <TextView
                    android:text="@string/design"
                    style="@style/about_title"/>

            <TextView
                    android:text="@string/vladimirPetrenko"
                    style="@style/about_person"/>

            <TextView
                    android:text="@string/mysteryPerson"
                    style="@style/about_person"/>

            <TextView
                    android:text="@string/languages"
                    style="@style/about_title"/>

            <TextView
                    android:text="@string/russian_ru"
                    style="@style/about_subtitle"/>

            <TextView
                    android:text="@string/vladimirPetrenko"
                    style="@style/about_person"/>

            <TextView
                    android:text="@string/english_en"
                    style="@style/about_subtitle"/>

            <TextView
                    android:text="@string/mysteryPerson"
                    style="@style/about_person"/>

            <TextView
                    android:text="@string/italian_it"
                    style="@style/about_subtitle"/>

            <TextView
                    android:text="@string/mysteryPerson"
                    style="@style/about_person"/>

            <TextView
                    android:text="@string/contacts"
                    style="@style/about_title"/>

            <TextView
                    android:text="@string/vladimirPetrenko"
                    style="@style/about_subtitle"/>

            <TextView
                    android:text="@string/vladimirPetrenko_mail"
                    style="@style/about_person"/>

            <TextView
                    android:text="@string/mysteryPerson"
                    style="@style/about_subtitle"/>

            <TextView
                    android:text="@string/misteryPerson_mail"
                    style="@style/about_person"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>